--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leaflet-canvas-markers",
   "version": "1.0.4",
-  "description": "Leaflet plugin. Adding all images to one canvas, together with the base L.CircleMarker",
+  "description": "Adding all images to one canvas, together with the base L.CircleMarker! And you can create a direction arrow just by pointing to the previous waypoint.",
   "main": "leaflet-canvas-markers.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
