--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@thxmxx/canvas-markers",
-  "version": "1.0.1",
+  "name": "canvasmarkers-leaflet",
+  "version": "1.0.2",
   "description": "Adding all images to one canvas, together with the base L.CircleMarker! And you can create a direction arrow just by pointing to the previous waypoint.",
   "main": "leaflet-canvas-markers.js",
   "scripts": {
